# octopus-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: release.yml
crates/octopus-cli/: Cargo.toml
crates/octopus-cli/src/: main.rs
crates/octopus-core/: Cargo.toml
crates/octopus-core/src/: config.rs  constants.rs  error.rs  lib.rs  types.rs
crates/octopus-core/src/model/: alert.rs  api_key.rs  audit.rs  channel.rs  group.rs  llm.rs  mod.rs  proxy.rs  relay_log.rs  setting.rs  site.rs  stats.rs  user.rs  webauthn.rs
crates/octopus-db/: Cargo.toml
crates/octopus-db/src/: cache.rs  lib.rs  migrate.rs  pool.rs
crates/octopus-db/src/ops/: alert.rs  api_key.rs  audit.rs  channel.rs  group.rs  mod.rs  setting.rs  stats.rs  user.rs
crates/octopus-hub/: Cargo.toml
crates/octopus-hub/src/: aihubmix.rs  axonhub.rs  claudecodehub.rs  ldoh.rs  lib.rs  octopus_hub.rs  sapi.rs  sub2api.rs
crates/octopus-relay/: Cargo.toml
crates/octopus-relay/src/: circuit_breaker.rs  condition.rs  handler.rs  lib.rs  semantic_cache.rs
crates/octopus-relay/src/balancer/: auto.rs  failover.rs  mod.rs  random.rs  round_robin.rs  runtime_state.rs  weighted.rs
crates/octopus-server/: Cargo.toml
crates/octopus-server/src/: app.rs  lib.rs  response.rs  static_files.rs
crates/octopus-server/src/handlers/: alert.rs  analytics.rs  announcement.rs  api_key.rs  audit.rs  auth.rs  backup.rs  bootstrap.rs  channel.rs  credential.rs  db_migration.rs  group.rs  log.rs  media.rs  mod.rs  model.rs  model_mapping.rs  ops.rs  pagination.rs  redact.rs  relay.rs  remote_site.rs  setting.rs  site.rs  site_channel.rs  stats.rs  update.rs  usage.rs  user.rs  verification.rs  webauthn.rs
crates/octopus-server/src/middleware/: api_key.rs  audit.rs  auth.rs  cors.rs  logging.rs  mod.rs  security.rs
crates/octopus-site/: Cargo.toml
crates/octopus-site/src/: balance.rs  checkin.rs  detect.rs  lib.rs  project.rs  sync.rs
crates/octopus-task/: Cargo.toml
crates/octopus-task/src/: lib.rs
crates/octopus-transformer/: Cargo.toml
crates/octopus-transformer/src/: lib.rs  model.rs  rewrite.rs
crates/octopus-transformer/src/inbound/: anthropic.rs  mod.rs  openai.rs
crates/octopus-transformer/src/outbound/: anthropic.rs  cloudflare.rs  gemini.rs  mimo.rs  mod.rs  openai.rs  volcengine.rs
web/: README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
web/public/: manifest.json
web/public/locale/: en.json
web/src/api/: client.ts  constants.ts  types.ts
web/src/api/endpoints/: alert.ts  analytics.ts  announcement.ts  api-credential.ts  apikey-format.ts  apikey.test.ts  apikey.ts  balance-history.ts  bootstrap.ts  channel.ts  checkin.ts  group-progress.hook.test.ts  group.ts  log.hook.test.ts  log.ts  model-mapping.ts  model.ts  ops.ts  proxy-pool.ts  redemption.ts  remote-site.ts  setting.ts  site-channel.ts  site-discovery.ts  site.ts  stats.ts  update.ts  usage-history.ts  user.ts  webauthn.ts  webdav.ts
web/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx
web/src/components/: app.tsx  sw-register.tsx
web/src/components/common/: AnimatedNumber.tsx  CopyButton.tsx  ErrorState.tsx  IslandShell.tsx  LoadingState.tsx  PageWrapper.tsx  PodCard.tsx  VirtualizedGrid.tsx
web/src/components/modules/: first-run-setup.tsx
web/src/components/modules/alert/: forms.test.ts  forms.ts  index.tsx
web/src/components/modules/analytics/: ChannelModel.tsx  Evaluation.tsx  GroupHealth.tsx  LatencyDistribution.tsx  Overview.tsx  ShareSnapshot.tsx  UsageDistribution.tsx  Utilization.tsx  cache-context.tsx  index.tsx  shared.tsx  use-sort.ts
web/src/components/modules/apikey/: endpoint-grouping.test.ts  endpoint-grouping.ts  index.tsx
web/src/components/modules/apikey-dashboard/: index.tsx
web/src/components/modules/channel/: CCSwitchProviderLink.tsx  Card.tsx  CardContent.tsx  Create.tsx  Form.tsx  GroupManager.tsx  base-url-suffix.test.ts  base-url-suffix.ts  ccswitch.test.ts  ccswitch.ts  index.tsx  metric-format.test.ts  metric-format.ts  templates.ts  type-options.test.ts  type-options.ts
web/src/components/modules/credential/: CredentialDialog.tsx
web/src/components/modules/group/: AIRouteButton.tsx  AIRouteProgressDialog.tsx  AutoGroupButton.tsx  CCSwitchLinkButton.tsx  Card.tsx  Create.tsx  Editor.tsx  GroupListItem.tsx  ItemList.tsx  MaintenanceButton.tsx  capabilities.test.ts  capabilities.ts  index.test.ts  index.tsx  task-storage.ts  utils.ts
web/src/components/modules/home/: activity.tsx  analytics-overview.tsx  chart.tsx  hero.tsx  index.tsx  rank.tsx  store.test.ts  store.ts
web/src/components/modules/log/: Item.tsx  display.test.ts  display.ts  index.tsx  ui-store.ts
web/src/components/modules/login/: index.tsx
web/src/components/modules/model/: Create.tsx  EndpointsView.tsx  Item.tsx  ItemOverlays.tsx  MarketSummary.tsx  MobileModelItem.tsx  index.tsx  latency-format.test.ts  latency-format.ts  normalize.test.ts  normalize.ts  sort.test.ts  sort.ts  useModelFilters.ts  useNormalizeRulesSync.ts  (+1 more)
web/src/components/modules/model-mapping/: index.tsx
web/src/components/nature/: BreathingElement.tsx  MagneticWrapper.tsx  OrganicBlob.tsx  ParticleBackground.tsx  RippleEffect.tsx  index.ts
web/src/components/ui/: accordion.tsx  alert-dialog.tsx  badge.tsx  button.tsx  calendar.tsx  card.tsx  dialog.tsx  input.tsx  morphing-dialog-state.test.ts  morphing-dialog-state.ts  morphing-dialog.tsx  popover.tsx  progress.tsx  select.tsx  switch.tsx  table.tsx
web/src/hooks/: use-mobile.ts  use-searchable-list.ts
web/src/lib/: clipboard.test.ts  clipboard.ts  i18n-runtime.ts  info.ts  model-icons.tsx  nav-handoff.ts  sw.ts  time.test.ts  time.ts  utils.test.ts  utils.ts
web/src/lib/animations/: fluid-transitions.ts
web/src/provider/: locale.tsx  query.tsx  theme.tsx
web/src/route/: config.tsx  content-loader.tsx  use-preload.ts
web/src/stores/: jump.ts  setting.test.ts  setting.ts
web/src/test-utils/: fetch-mock.ts  query-client.ts  timers.test.ts  timers.ts
web/tests/: i18n.test.cjs  i18n.test.mjs
(+73 files in other folders)
