[workspace]
members = [
    "crates/octopus-core",
    "crates/octopus-db",
    "crates/octopus-relay",
    "crates/octopus-transformer",
    "crates/octopus-site",
    "crates/octopus-hub",
    "crates/octopus-server",
    "crates/octopus-task",
    "crates/octopus-cli",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["lingyu"]
license = "MIT"
repository = "https://github.com/lingyuins/octopus"

[workspace.dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "auth"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"
aes-gcm = "0.10"
ring = "0.17"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Configuration
figment = { version = "0.10", features = ["json", "env"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Concurrent data structures
dashmap = "6"
tokio-util = "0.7"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Regex
regex = "1"
once_cell = "1"

# Random
rand = "0.8"

# URL
url = "2"

# Crypto
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

# SSE
futures = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"

# Error handling
thiserror = "2"
anyhow = "1"

# Async trait
async-trait = "0.1"

# Misc
bytes = "1"
mime = "0.3"
mime_guess = "2"

# Internal crates
octopus-core = { path = "crates/octopus-core" }
octopus-db = { path = "crates/octopus-db" }
octopus-relay = { path = "crates/octopus-relay" }
octopus-transformer = { path = "crates/octopus-transformer" }
octopus-site = { path = "crates/octopus-site" }
octopus-hub = { path = "crates/octopus-hub" }
octopus-server = { path = "crates/octopus-server" }
octopus-task = { path = "crates/octopus-task" }