[package]
name = "octopus-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
octopus-core.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
dashmap.workspace = true
once_cell.workspace = true