[package]
name = "octopus-hub"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
octopus-core.workspace = true
octopus-db.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true