[package]
name = "octopus-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
octopus-core.workspace = true
octopus-db.workspace = true
octopus-relay.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
bytes.workspace = true
futures.workspace = true
# Used by middleware::auth::generate_api_key
rand.workspace = true